--- a/Jobsheet 5.ipynb
+++ b/Jobsheet 5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0f7+IufZLKhnBOw4jTEVu",
+      "authorship_tag": "ABX9TyMHMxzS2a1QhT3MtKgvbMLq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -192,7 +192,7 @@
         "id": "Ty1iv-dqitpq",
         "outputId": "8ecc15d9-d4e4-4cf4-ed4c-3b25b828831e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,7 +267,7 @@
         "id": "DzFg7wKjrZZt",
         "outputId": "0ae32204-47a7-414a-eb0c-8a8fe8b0e21c"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -361,8 +361,7 @@
         "  dict_params = {\"timeout\": 30, \"retry\": 3}\n",
         "  processor1.process(list_ids, dict_params, owner=\"system\", enabled=True)\n",
         "\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "colab": {
@@ -371,7 +370,7 @@
         "id": "xl3nqk8ou-iQ",
         "outputId": "e34a99fe-093b-4af6-b089-29c04e355502"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -523,7 +522,7 @@
         "id": "jOr8bHWH0TJc",
         "outputId": "769b9a3d-f828-426a-ffa0-c0b0212c9b7d"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -636,7 +635,7 @@
         "id": "MaO5HsuH57DR",
         "outputId": "4a3df8c3-68ac-4ecb-d6eb-d4514d6ec314"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -668,15 +667,176 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "-"
+        "Penugasan"
       ],
       "metadata": {
-        "id": "hn2pjWkMCquC"
+        "id": "5u4VV0s-X--1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Kelas Induk\n",
+        "class Komputer:\n",
+        "  def __init__(self, merk, processor, ram_gb):\n",
+        "    self.merk = merk\n",
+        "    self.processor = processor\n",
+        "    self.ram_gb = ram_gb\n",
+        "\n",
+        "  def info_spesifikasi(self):\n",
+        "    print(f\"Merk: {self.merk}\")\n",
+        "    print(f\"Processor: {self.processor}\")\n",
+        "    print(f\"RAM: {self.ram_gb} GB\")\n",
+        "\n",
+        "  def jalankan_aplikasi(self, nama_aplikasi):\n",
+        "    print(f\"{self.merk} menjalankan aplikasi: {nama_aplikasi}...\")\n",
+        "\n",
+        "  def upgrade_ram(self, tambahan_gb, tipe_ram=\"DDR4\"):\n",
+        "    self.ram_gb += tambahan_gb\n",
+        "    print(f\"Total RAM sekarang: {self.ram_gb} GB.\")\n",
+        "\n",
+        "# Kelas anak 1\n",
+        "class Laptop(Komputer):\n",
+        "  def __init__(self, merk, processor, ram_gb, ukuran_layar_inch, berat_kg):\n",
+        "    super() .__init__(merk, processor, ram_gb)\n",
+        "    self.ukuran_layar_inch = ukuran_layar_inch\n",
+        "    self.berat_kg = berat_kg\n",
+        "\n",
+        "  def info_spesifikasi(self):\n",
+        "    super() .info_spesifikasi()\n",
+        "    print(f\"Ukuran Layar: {self.ukuran_layar_inch} inch\")\n",
+        "    print(f\"Berat: {self.berat_kg} Kg\")\n",
+        "\n",
+        "# Kelas anak 2\n",
+        "class Desktop(Komputer):\n",
+        "  def __init__(self, merk, processor, ram_gb, jenis_casing, monitor_external):\n",
+        "    super() .__init__(merk, processor, ram_gb)\n",
+        "    self.jenis_casing = jenis_casing\n",
+        "    self.monitor_external = monitor_external\n",
+        "\n",
+        "  def info_spesifikasi(self):\n",
+        "    super() .info_spesifikasi()\n",
+        "    print(f\"Jenis Casing: {self.jenis_casing}\")\n",
+        "    print(f\"Monitor External: {self.monitor_external}\")\n",
+        "\n",
+        "def cetak_semua_spesifikasi(daftar_komputer):\n",
+        "  print(\"\\n=== Menampilkan Semua Spesifikasi Komputer ===\")\n",
+        "  for komputer in daftar_komputer:\n",
+        "    komputer.info_spesifikasi()\n",
+        "    print(\"-\" * 30)\n",
+        "\n",
+        "# === kode utama ===\n",
+        "if __name__ == \"__main__\":\n",
+        "  laptop1 = Laptop(\"Acer\", \"Intel i5\", 8, 14.0, 1.5)\n",
+        "  desktop1 = Desktop(\"Lenovo\", \"AMD Ryzen 5\", 16, \"Tower\", True)\n",
+        "\n",
+        "  daftar_komputer = [laptop1, desktop1]\n",
+        "  cetak_semua_spesifikasi(daftar_komputer)\n",
+        "\n",
+        "  print(\"\\n--- Demonstrasi Overloading (Default Argument) ---\")\n",
+        "  laptop1.upgrade_ram(4)\n",
+        "  desktop1.upgrade_ram(8, \"DDR5\")\n",
+        "\n",
+        "# Kelas Induk\n",
+        "class Komputer:\n",
+        "  def __init__(self, merk, processor, ram_gb):\n",
+        "    self.merk = merk\n",
+        "    self.processor = processor\n",
+        "    self.ram_gb = ram_gb\n",
+        "\n",
+        "  def info_spesifikasi(self):\n",
+        "    print(f\"Merk: {self.merk}\")\n",
+        "    print(f\"Processor: {self.processor}\")\n",
+        "    print(f\"RAM: {self.ram_gb} GB\")\n",
+        "\n",
+        "  def jalankan_aplikasi(self, nama_aplikasi):\n",
+        "    print(f\"{self.merk} menjalankan aplikasi: {nama_aplikasi}...\")\n",
+        "\n",
+        "  def upgrade_ram(self, tambahan_gb, tipe_ram=\"DDR4\"):\n",
+        "    self.ram_gb += tambahan_gb\n",
+        "    print(f\"Total RAM sekarang: {self.ram_gb} GB.\")\n",
+        "\n",
+        "# Kelas anak 1\n",
+        "class Laptop(Komputer):\n",
+        "  def __init__(self, merk, processor, ram_gb, ukuran_layar_inch, berat_kg):\n",
+        "    super() .__init__(merk, processor, ram_gb)\n",
+        "    self.ukuran_layar_inch = ukuran_layar_inch\n",
+        "    self.berat_kg = berat_kg\n",
+        "\n",
+        "  def info_spesifikasi(self):\n",
+        "    super() .info_spesifikasi()\n",
+        "    print(f\"Ukuran Layar: {self.ukuran_layar_inch} inch\")\n",
+        "    print(f\"Berat: {self.berat_kg} Kg\")\n",
+        "\n",
+        "# Kelas anak 2\n",
+        "class Desktop(Komputer):\n",
+        "  def __init__(self, merk, processor, ram_gb, jenis_casing, monitor_external):\n",
+        "    super() .__init__(merk, processor, ram_gb)\n",
+        "    self.jenis_casing = jenis_casing\n",
+        "    self.monitor_external = monitor_external\n",
+        "\n",
+        "  def info_spesifikasi(self):\n",
+        "    super() .info_spesifikasi()\n",
+        "    print(f\"Jenis Casing: {self.jenis_casing}\")\n",
+        "    print(f\"Monitor External: {self.monitor_external}\")\n",
+        "\n",
+        "def cetak_semua_spesifikasi(daftar_komputer):\n",
+        "  print(\"\\n=== Menampilkan Semua Spesifikasi Komputer ===\")\n",
+        "  for komputer in daftar_komputer:\n",
+        "    komputer.info_spesifikasi()\n",
+        "    print(\"-\" * 30)\n",
+        "\n",
+        "# === kode utama ===\n",
+        "if __name__ == \"__main__\":\n",
+        "  laptop1 = Laptop(\"Acer\", \"Intel i5\", 8, 14.0, 1.5)\n",
+        "  desktop1 = Desktop(\"Lenovo\", \"AMD Ryzen 5\", 16, \"Tower\", True)\n",
+        "\n",
+        "  daftar_komputer = [laptop1, desktop1]\n",
+        "  cetak_semua_spesifikasi(daftar_komputer)\n",
+        "\n",
+        "  print(\"\\n--- Demonstrasi Overloading (Default Argument) ---\")\n",
+        "  laptop1.upgrade_ram(4)\n",
+        "  desktop1.upgrade_ram(8, \"DDR5\")\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "hn2pjWkMCquC",
+        "outputId": "3458d869-1bec-45e6-96a3-b26dd7287539",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "=== Menampilkan Semua Spesifikasi Komputer ===\n",
+            "Merk: Acer\n",
+            "Processor: Intel i5\n",
+            "RAM: 8 GB\n",
+            "Ukuran Layar: 14.0 inch\n",
+            "Berat: 1.5 Kg\n",
+            "------------------------------\n",
+            "Merk: Lenovo\n",
+            "Processor: AMD Ryzen 5\n",
+            "RAM: 16 GB\n",
+            "Jenis Casing: Tower\n",
+            "Monitor External: True\n",
+            "------------------------------\n",
+            "\n",
+            "--- Demonstrasi Overloading (Default Argument) ---\n",
+            "Total RAM sekarang: 12 GB.\n",
+            "Total RAM sekarang: 24 GB.\n"
+          ]
+        }
+      ]
     }
   ]
 }
