--- a/Jobsheet12.ipynb
+++ b/Jobsheet12.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP0M4OUocKsRJozr0fdGuWf",
+      "authorship_tag": "ABX9TyNmvLtChozqJdRUaL44fxy2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -464,34 +464,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yodtj68E8vGo",
-        "outputId": "d1085eda-1e46-48b1-91e9-ffd3d0b6b061"
+        "outputId": "efc50584-1ceb-44df-8dc7-52695f05296f"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "--- Memulai Praktikum 4: Membuat Objek dari Data Pandas ---\n",
+            "ERROR saat membaca file CSV: ParserError - Error tokenizing data. C error: Expected 5 fields in line 3, saw 6\n",
             "\n",
-            "Membuat objek dari DataFrame...\n",
-            "  -> Peringatan: Tipe 'Tipe' untuk 'Nama' tidak dikenali. Tidak membuat objek spesifik.\n",
-            "Total 13 objek lokasi berhasil dibuat dari 14 baris data.\n",
+            "DataFrame kosong atau None, tidak ada objek dibuat.\n",
             "\n",
             "--- Daftar Objek Lokasi yang Berhasil Dibuat ---\n",
-            "1. TempatWisata(nama='Lawang Sewu', lat=-6.9840, lon=110.4105)\n",
-            "2. TempatWisata(nama='Simpang Lima', lat=-6.9929, lon=110.4200)\n",
-            "3. TempatIbadah(nama='Masjid Agung Jawa Tengah', lat=-6.9892, lon=110.4452)\n",
-            "4. TempatIbadah(nama='Klenteng Sam Poo Kong', lat=-6.9980, lon=110.4030)\n",
-            "5. TempatWisata(nama='Brown Canyon', lat=-7.0375, lon=110.4875)\n",
-            "6. Kuliner(nama='Lumpia Gang Lombok', lat=-6.9718, lon=110.4255)\n",
-            "7. TempatWisata(nama='Kota Lama', lat=-6.9690, lon=110.4250)\n",
-            "8. TempatWisata(nama='Pantai Marina', lat=-6.9585, lon=110.3875)\n",
-            "9. TempatWisata(nama='Kampoeng Kopi Banaran', lat=-7.2780, lon=110.4010)\n",
-            "10. Kuliner(nama='Toko Oen', lat=-6.9715, lon=110.4235)\n",
-            "11. Museum(nama='Museum Ranggawarsita', lat=-6.9783, lon=110.3754)\n",
-            "12. KantorPemerintahan(nama='Balai Kota Semarang', lat=-6.9902, lon=110.4212)\n",
-            "13. TamanKota(nama='Taman Indonesia Kaya', lat=-6.9936, lon=110.4183)\n",
+            "Tidak ada objek lokasi yang dibuat.\n",
             "\n",
             "--- Praktikum 4 Selesai ---\n"
           ]
@@ -517,9 +504,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3cmCh0la9rvo",
-        "outputId": "c3103f5e-a2e2-4e58-9480-d97954105579"
+        "outputId": "f73fa148-d7cb-4a0c-8e16-ffad3fae14ce"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -548,9 +535,10 @@
     {
       "cell_type": "code",
       "source": [
+        "# !pip install folium pandas  # Jalankan jika Folium dan Pandas belum terpasang\n",
         "import pandas as pd\n",
-        "import folium\n",
-        "from abc import ABC, abstractmethod\n",
+        "import folium  # Impor library Folium\n",
+        "from abc import ABC, abstractmethod  # Impor ABC dan abstractmethod\n",
         "\n",
         "# --- Definisi Kelas (Salin dari Praktikum 3/4) ---\n",
         "class Lokasi(ABC):\n",
@@ -574,6 +562,7 @@
         "    def __str__(self) -> str:\n",
         "        return f\"{self.nama} [{type(self).__name__}]\"\n",
         "\n",
+        "\n",
         "class TempatWisata(Lokasi):\n",
         "    def __init__(self, nama: str, latitude: float, longitude: float, jenis: str, deskripsi: str):\n",
         "        super().__init__(nama, latitude, longitude)\n",
@@ -583,6 +572,7 @@
         "    def get_info_popup(self) -> str:\n",
         "        return f\"<h4><b>{self.nama}</b></h4><i>{self.jenis_wisata}</i><br><br>{self.deskripsi}<br><br>Koordinat: ({self.latitude:.4f}, {self.longitude:.4f})\"\n",
         "\n",
+        "\n",
         "class Kuliner(Lokasi):\n",
         "    def __init__(self, nama: str, latitude: float, longitude: float, menu_andalan: str):\n",
         "        super().__init__(nama, latitude, longitude)\n",
@@ -590,6 +580,7 @@
         "\n",
         "    def get_info_popup(self) -> str:\n",
         "        return f\"<h4><b>{self.nama}</b></h4><i>Kuliner</i><br><br>Menu Andalan: {self.menu_andalan}<br><br>Koordinat: ({self.latitude:.4f}, {self.longitude:.4f})\"\n",
+        "\n",
         "\n",
         "class TempatIbadah(Lokasi):\n",
         "    def __init__(self, nama: str, latitude: float, longitude: float, agama: str = \"Umum\", deskripsi: str = \"\"):\n",
@@ -600,6 +591,30 @@
         "    def get_info_popup(self) -> str:\n",
         "        return f\"<h4><b>{self.nama}</b></h4><i>Tempat Ibadah ({self.agama})</i><br><br>{self.deskripsi}<br><br>Koordinat: ({self.latitude:.4f}, {self.longitude:.4f})\"\n",
         "\n",
+        "class Museum(Lokasi):\n",
+        "    def __init__(self, nama, latitude, longitude, jenis=\"Museum\", deskripsi=\"Museum umum.\"):\n",
+        "        super().__init__(nama, latitude, longitude)\n",
+        "        self.jenis = jenis\n",
+        "        self.deskripsi = deskripsi\n",
+        "\n",
+        "    def get_info_popup(self):\n",
+        "        return f\"<h4><b>{self.nama}</b></h4><i>{self.jenis}</i><br><br>{self.deskripsi}<br><br>Koordinat: ({self.latitude:.4f}, {self.longitude:.4f})\"\n",
+        "\n",
+        "class KantorPemerintahan(Lokasi):\n",
+        "    def __init__(self, nama, latitude, longitude, deskripsi=\"Kantor pemerintahan.\"):\n",
+        "        super().__init__(nama, latitude, longitude)\n",
+        "        self.deskripsi = deskripsi\n",
+        "\n",
+        "    def get_info_popup(self):\n",
+        "        return f\"<h4><b>{self.nama}</b></h4><i>Kantor Pemerintahan</i><br><br>{self.deskripsi}<br><br>Koordinat: ({self.latitude:.4f}, {self.longitude:.4f})\"\n",
+        "\n",
+        "class TamanKota(Lokasi):\n",
+        "    def __init__(self, nama, latitude, longitude, deskripsi=\"Taman kota terbuka.\"):\n",
+        "        super().__init__(nama, latitude, longitude)\n",
+        "        self.deskripsi = deskripsi\n",
+        "\n",
+        "    def get_info_popup(self):\n",
+        "        return f\"<h4><b>{self.nama}</b></h4><i>Taman Kota</i><br><br>{self.deskripsi}<br><br>Koordinat: ({self.latitude:.4f}, {self.longitude:.4f})\"\n",
         "\n",
         "# --- Fungsi baca data dan buat objek (Salin dari Praktikum 4) ---\n",
         "def baca_data_lokasi(nama_file: str) -> pd.DataFrame | None:\n",
@@ -613,19 +628,24 @@
         "        print(f\"ERROR saat membaca file CSV: {type(e).__name__} - {e}\")\n",
         "        return None\n",
         "\n",
+        "\n",
         "def buat_objek_lokasi_dari_df(dataframe: pd.DataFrame) -> list:\n",
         "    list_objek_lokasi = []\n",
         "    if dataframe is None or dataframe.empty:\n",
         "        return list_objek_lokasi\n",
+        "\n",
+        "    # print(\"\\nMembuat objek dari DataFrame...\")  # Kurangi verbosity\n",
         "    for index, row in dataframe.iterrows():\n",
         "        nama = row.get('Nama', None)\n",
         "        lat = row.get('Latitude', None)\n",
         "        lon = row.get('Longitude', None)\n",
         "        tipe = row.get('Tipe', 'Lainnya')\n",
         "        deskripsi = row.get('Deskripsi', '')\n",
+        "\n",
         "        objek = None\n",
         "        if nama is None or lat is None or lon is None:\n",
         "            continue\n",
+        "\n",
         "        try:\n",
         "            if 'Wisata' in tipe or tipe == 'Landmark':\n",
         "                objek = TempatWisata(nama, lat, lon, tipe, deskripsi)\n",
@@ -634,17 +654,36 @@
         "            elif 'Ibadah' in tipe:\n",
         "                agama_info = \"Umum\"\n",
         "                objek = TempatIbadah(nama, lat, lon, agama_info, deskripsi)\n",
+        "            elif 'Museum' in tipe:\n",
+        "                objek = Museum(nama, lat, lon, tipe, deskripsi)\n",
+        "            elif 'Kantor' in tipe:\n",
+        "                objek = KantorPemerintahan(nama, lat, lon, deskripsi)\n",
+        "            elif 'Taman' in tipe:\n",
+        "                objek = TamanKota(nama, lat, lon, deskripsi)\n",
         "            if objek:\n",
         "                list_objek_lokasi.append(objek)\n",
         "        except Exception as e:\n",
         "            print(f\"  -> GAGAL membuat objek untuk '{nama}' di baris {index}: {e}\")\n",
+        "\n",
+        "    # print(f\"Total {len(list_objek_lokasi)} objek lokasi berhasil dibuat...\")  # Kurangi verbosity\n",
         "    return list_objek_lokasi\n",
+        "\n",
+        "def baca_konfigurasi_peta(file_config=\"config_peta.txt\"):\n",
+        "    try:\n",
+        "        with open(file_config, 'r') as f:\n",
+        "            lines = f.readlines()\n",
+        "            lat = float(lines[0].strip())\n",
+        "            lon = float(lines[1].strip())\n",
+        "            zoom = int(lines[2].strip())\n",
+        "            return lat, lon, zoom\n",
+        "    except Exception as e:\n",
+        "        print(f\"[Konfigurasi] ERROR: {e}\")\n",
+        "        return -6.9929, 110.4200, 13  # fallback default\n",
         "\n",
         "# --- Fungsi Inti Praktikum Ini ---\n",
         "def buat_peta_lokasi_folium(list_objek: list, file_output: str = \"peta_lokasi.html\"):\n",
         "    \"\"\"\n",
-        "    Membuat peta Folium interaktif dengan marker untuk setiap objek\n",
-        "    dalam list_objek.\n",
+        "    Membuat peta Folium interaktif dengan marker untuk setiap objek dalam list_objek.\n",
         "\n",
         "    Args:\n",
         "        list_objek (list): List berisi instance objek turunan Lokasi.\n",
@@ -656,29 +695,51 @@
         "\n",
         "    print(f\"\\nMemulai pembuatan peta Folium dari {len(list_objek)} lokasi...\")\n",
         "\n",
+        "    # 1. Tentukan titik tengah peta (misal: lokasi pertama)\n",
         "    try:\n",
-        "        lat_tengah = list_objek[0].latitude\n",
-        "        lon_tengah = list_objek[0].longitude\n",
+        "        lat_tengah, lon_tengah, zoom_level = baca_konfigurasi_peta()\n",
         "    except IndexError:\n",
-        "        lat_tengah, lon_tengah = -6.9929, 110.4200\n",
+        "        lat_tengah, lon_tengah = -6.9929, 110.4200  # Default Semarang\n",
         "\n",
-        "    peta = folium.Map(location=[lat_tengah, lon_tengah], zoom_start=13, tiles=\"OpenStreetMap\")\n",
+        "    # 2. Buat objek peta Folium\n",
+        "    peta = folium.Map(location=[lat_tengah, lon_tengah], zoom_start=zoom_level, tiles=\"OpenStreetMap\")\n",
         "    print(f\"  -> Objek peta dibuat, berpusat di ({lat_tengah:.4f}, {lon_tengah:.4f})\")\n",
         "\n",
+        "    # 3. Tambahkan marker untuk setiap lokasi dalam list\n",
         "    jumlah_marker_valid = 0\n",
         "    for lok in list_objek:\n",
         "        koordinat = lok.get_koordinat()\n",
+        "\n",
         "        if koordinat != (0.0, 0.0):\n",
         "            info_popup_html = lok.get_info_popup()\n",
+        "\n",
+        "            # Warna ikon berdasarkan tipe objek\n",
+        "            if isinstance(lok, TempatWisata):\n",
+        "                warna = 'blue'\n",
+        "            elif isinstance(lok, Kuliner):\n",
+        "                warna = 'red'\n",
+        "            elif isinstance(lok, TempatIbadah):\n",
+        "                warna = 'green'\n",
+        "            elif isinstance(lok, Museum):\n",
+        "                warna = 'purple'\n",
+        "            elif isinstance(lok, KantorPemerintahan):\n",
+        "                warna = 'gray'\n",
+        "            elif isinstance(lok, TamanKota):\n",
+        "                warna = 'orange'\n",
+        "            else:\n",
+        "                warna = 'cadetblue'\n",
+        "\n",
         "            folium.Marker(\n",
         "                location=koordinat,\n",
         "                popup=folium.Popup(info_popup_html, max_width=300),\n",
-        "                tooltip=lok.nama\n",
+        "                tooltip=lok.nama,\n",
+        "                icon=folium.Icon(color=warna, icon='info-sign')  # Contoh kustomisasi ikon\n",
         "            ).add_to(peta)\n",
         "            jumlah_marker_valid += 1\n",
         "        else:\n",
         "            print(f\"  -> Melewati marker untuk '{lok.nama}' karena koordinat tidak valid.\")\n",
         "\n",
+        "    # 4. Simpan peta ke file HTML\n",
         "    try:\n",
         "        peta.save(file_output)\n",
         "        print(f\"\\n-> Peta berhasil dibuat dan disimpan sebagai '{file_output}'.\")\n",
@@ -686,15 +747,23 @@
         "    except Exception as e:\n",
         "        print(f\"\\nERROR saat menyimpan peta Folium: {type(e).__name__} - {e}\")\n",
         "\n",
+        "\n",
         "# --- Kode Utama ---\n",
         "if __name__ == \"__main__\":\n",
         "    NAMA_FILE_CSV = \"lokasi_semarang.csv\"\n",
-        "    NAMA_FILE_PETA = \"peta_interaktif_semarang.html\"\n",
+        "    NAMA_FILE_PETA = \"peta_interaktif_semarang_penugasan.html\"\n",
         "\n",
         "    print(\"--- Memulai Praktikum 5: Visualisasi Peta dengan Folium --\")\n",
+        "\n",
+        "    # 1. Baca data CSV\n",
         "    df_lokasi = baca_data_lokasi(NAMA_FILE_CSV)\n",
+        "\n",
+        "    # 2. Buat list objek dari DataFrame\n",
         "    list_semua_lokasi = buat_objek_lokasi_dari_df(df_lokasi)\n",
+        "\n",
+        "    # 3. Buat peta dari list objek\n",
         "    buat_peta_lokasi_folium(list_semua_lokasi, NAMA_FILE_PETA)\n",
+        "\n",
         "    print(f\"\\nSilakan buka file '{NAMA_FILE_PETA}' di browser Anda untuk melihat hasilnya.\")\n",
         "    print(\"\\n--- Praktikum 5 Selesai ---\")\n"
       ],
@@ -703,9 +772,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "goidyzUH9J4e",
-        "outputId": "0a14f34e-3a3e-4e09-f3d3-a84c36c3ab98"
+        "outputId": "574ec4c8-2729-4996-fbb1-cdb05d4056b6"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -713,13 +782,13 @@
           "text": [
             "--- Memulai Praktikum 5: Visualisasi Peta dengan Folium --\n",
             "\n",
-            "Memulai pembuatan peta Folium dari 10 lokasi...\n",
-            "  -> Objek peta dibuat, berpusat di (-6.9840, 110.4105)\n",
+            "Memulai pembuatan peta Folium dari 13 lokasi...\n",
+            "  -> Objek peta dibuat, berpusat di (-6.9929, 110.4200)\n",
             "\n",
-            "-> Peta berhasil dibuat dan disimpan sebagai 'peta_interaktif_semarang.html'.\n",
-            "   Total marker ditambahkan: 10\n",
+            "-> Peta berhasil dibuat dan disimpan sebagai 'peta_interaktif_semarang_penugasan.html'.\n",
+            "   Total marker ditambahkan: 13\n",
             "\n",
-            "Silakan buka file 'peta_interaktif_semarang.html' di browser Anda untuk melihat hasilnya.\n",
+            "Silakan buka file 'peta_interaktif_semarang_penugasan.html' di browser Anda untuk melihat hasilnya.\n",
             "\n",
             "--- Praktikum 5 Selesai ---\n"
           ]
@@ -738,9 +807,9 @@
           "height": 17
         },
         "id": "3pcZpg9CUGW3",
-        "outputId": "53ecfb65-c81f-4230-9f45-91e0429bc503"
+        "outputId": "64aa4999-6d74-46a7-c994-f197356c2277"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -801,7 +870,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_57f97995-91f1-4a15-8969-c9d2fa480c4d\", \"peta_interaktif_semarang.html\", 13939)"
+              "download(\"download_32495448-e2b6-4af6-a5a6-58b788796179\", \"peta_interaktif_semarang.html\", 13939)"
             ]
           },
           "metadata": {}
@@ -989,7 +1058,7 @@
       "metadata": {
         "id": "8nhqYwrHVFbr"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1483,6 +1552,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "PENUGASAN"
+      ],
+      "metadata": {
+        "id": "W3Rla9647MHT"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
@@ -1686,18 +1764,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N3OXoAxxRV4P",
-        "outputId": "419ed871-97a3-40f5-811c-a8c12b23b51b"
+        "outputId": "9fbc59d5-ba98-4e07-9096-20135f0b5954"
       },
-      "execution_count": 33,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "--- Memulai Praktikum: Visualisasi Peta dengan Folium ---\n",
-            "ERROR saat membaca file CSV: ParserError - Error tokenizing data. C error: Expected 5 fields in line 3, saw 6\n",
             "\n",
-            "Tidak ada objek lokasi untuk dipetakan.\n",
+            "-> Peta berhasil dibuat (13 marker) disimpan di 'peta_interaktif_semarang.html'.\n",
             "\n",
             "Silakan buka file HTML peta di browser untuk melihat hasilnya.\n"
           ]
@@ -1716,9 +1793,9 @@
           "height": 17
         },
         "id": "H_jm2U-PRaDy",
-        "outputId": "7eba32f8-6720-4166-88bc-186a94f0bc9c"
+        "outputId": "f872e0c2-173d-40b0-ef03-f2dbcaa9d999"
       },
-      "execution_count": 34,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1779,7 +1856,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_959e5c11-3046-40c9-bae5-77ba2b9a78e9\", \"peta_interaktif_semarang.html\", 22039)"
+              "download(\"download_6762be08-a16c-4e05-9a79-f15f159f0e01\", \"peta_interaktif_semarang.html\", 22528)"
             ]
           },
           "metadata": {}
@@ -1955,7 +2032,7 @@
         "id": "bHahVsdQYuLt",
         "outputId": "a2bf174b-14ad-45a6-934b-9db04aa1a0de"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
